<resources>
    <string name="app_name">HandMeasurementStudy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tapping">Tapping</string>
    <string name="title_activity_swiping">Swiping</string>
    <string name="title_activity_scrolling">Scrolling</string>
    <string name="title_activity_zooming">Zooming</string>
    <string name="button_start">Start</string>
    <string name="button_export_db">Export Database</string>
    <string name="label_trial_mode">Trial:</string>
    <string name="label_session_index">Modus:</string>
    <string name="label_age">Alter:</string>
    <string name="label_hand_width">Handbreite:</string>
    <string name="label_hand_length">Handlänge:</string>
    <string name="label_name">Name:</string>
    <string name="label_userID">ID:</string>
    <string name="title_activity_trial">Tapping</string>
    <string name="name_text_hint">participant</string>
    <string name="userID_text_hint">defines task order</string>
    <string name="session_index_hint">[1]st or [2]nd session</string>
    <string name="scrolling_description">In diesem Task ist es die Aufgabe, ans Ende einer Liste zu scrollen. Klicke Start um zu beginnen.</string>
    <string name="swiping_description">In diesem Task soll ein Slider von der Anfangs- zur Endpostion bewegt werden. Es gibt insgesamt 4 Durchlaeufe auf unterschiedlichen Positionen des Sliders. Klicke auf Start um zu beginnen.</string>
    <string name="zooming_description">In diesem Task soll das blaue Rechteck soweit skaliert werden, dass es in den roten Rahmen passt. Es gibt drei verschiedene Rahmen</string>
    <string name="zooming_maximum_description">In diesem Task soll das blaue Rechteck mit einer einzgen "Pinch-to-Zoom" Geste so weit wie möglich skaliert werden.</string>
    <string name="tablet_description">Gehe bitte zum Tablet und führe die Aufgabe dort aus. Klicke auf \"Fertig\" wenn du die Aufgabe dort erledigt hast.</string>
</resources>