<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_export_DB"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickExportDBButton"
        android:text="@string/button_export_db" />

    <Spinner
        android:id="@+id/session_index_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/session_index_label"
        android:layout_toRightOf="@+id/session_index_label" />

    <TextView
        android:id="@+id/session_index_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/userID_label"
        android:layout_marginTop="16dp"
        android:text="@string/label_session_index"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/trial_mode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/session_index_label"
        android:layout_below="@+id/session_index_spinner"
        android:text="@string/label_trial_mode"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/trial_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/trial_mode_label"
        android:layout_toRightOf="@+id/trial_mode_label" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/session_index_spinner"
        android:ems="10"
        android:hint="@string/name_text_hint" >
    </EditText>

    <Button
        android:id="@+id/button_test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_export_DB"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="56dp"
        android:onClick="onClickStartButton"
        android:text="@string/button_start" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name_text"
        android:layout_alignBottom="@+id/name_text"
        android:text="@string/label_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/userID_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name_text"
        android:text="@string/label_userID"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/userID_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_text"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/userID_label"
        android:ems="10"
        android:hint="@string/userID_text_hint"
        android:inputType="number" />


</RelativeLayout>